--- a/main.html
+++ b/main.html
@@ -3,14 +3,17 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div class="box">1</div>
+		<div class="box">2</div>
+		<div class="box">3</div>
+		<div class="box">4</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
-
 </html>
